--- a/mik_no.html
+++ b/mik_no.html
@@ -20,10 +20,10 @@
                     <h2>sorry this is not allowed, lets try that again</h2>
                 </div>
                 <div id = "display" class="row">
-                    <img src="no.gif" alt="">
+                    <img src="no.gif" alt=""  style="height: 70%; width: 70%;"">
                 </div>
                 <div id = "display" class="row">
-                    <a href="mik_v.html" style="width:100%; display:inline-block; border-style: double; margin-bottom: 10px; line-height: 30%; border-radius: 40%;"><h3>Try Again</h3></a>
+                    <a href="index.html" style="width:100%; display:inline-block; border-style: double; margin-bottom: 10px; line-height: 30%; border-radius: 40%;"><h3>Try Again</h3></a>
                     
                 </div>
             </div>
