--- a/mik_lov.html
+++ b/mik_lov.html
@@ -16,13 +16,14 @@
         <div class = "calculator fw"> 
             <div class = "row">
                 <div id = "display" class="row">
-                    <h1>Hey...</h1>
+                    <h1>WILL YOU BE MY VALENTINES?</h1>
                 </div>
                 <div id = "display" class="row">
-                    <h1>I wanna ask you something...</h1>
+                    <img src="p1.gif" alt="">
                 </div>
                 <div id = "display" class="row">
-                    <a href="mik_lov.html"><h3>Click here if you wanna know :)</h3></a>
+                    <a href="mik_yes.html" style="width:50%; display:inline-block; border-style: double; margin-bottom: 10px; line-height: 30%; border-radius: 40%;"><h3>YES :)</h3></a>
+                    <a href="mik_no.html" style="width:50%; display:inline-block; border-style: double; line-height: 30%; border-radius: 40%;"><h3>NO :(</h3></a>
                 </div>
             </div>
         </div>
